--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "devDependencies": {
     "gulp": "^3.0.0",
-    "gulp-uncss": "^1.0.0",
+    "gulp-purifycss": "^0.2.0",
     "gulp-csso": "^3.0.0"
   }
 }
