Build modernizr via Gulp task.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "middleman-v4",
   "version": "1.0.0",
   "devDependencies": {
+    "write": "^0.3.3",
+    "modernizr": "^3.5.0",
     "gulp": "^3.0.0",
     "gulp-purifycss": "^0.2.0",
     "gulp-csso": "^3.0.0",
