Use NPM for JS libs (jQuery, Turbolinks, what-input).

--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   "license": "BSD-2-Clause",
   "version": "1.0.0",
   "devDependencies": {
-    "write": "^0.3.3",
-    "modernizr": "^3.5.0",
     "gulp": "^3.0.0",
-    "gulp-purifycss": "^0.2.0",
     "gulp-csso": "^3.0.0",
+    "gulp-purifycss": "^0.2.0",
     "gulp-rev": "^7.0.0",
     "gulp-rev-delete-original": "^0.0",
-    "gulp-rev-replace": "jamesknelson/gulp-rev-replace"
+    "gulp-rev-replace": "^0.4.3",
+    "jquery": "^3.2.1",
+    "modernizr": "^3.5.0",
+    "turbolinks": "^5.0.2",
+    "what-input": "^4.1.1",
+    "write": "^0.3.3"
   }
 }
