--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
     "gulp-rev": "^7",
     "gulp-rev-delete-original": "^0.0",
     "gulp-rev-replace": "^0.4",
-    "jquery": "^3",
     "modernizr": "^3",
-    "turbolinks": "^5",
-    "what-input": "^4",
-    "write": "^0.3"
+    "underscore": "^1",
+    "write": "^0.3",
+    "zepto": "^1"
   }
 }
